first pass at cardinal support

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,7 +1,9 @@
 <%-
 
-  cores_lookup = {"hugemem" => {"pitzer" => "80", "owens" => "48"}, 
-                  "any" => {"pitzer" => "40", "owens" => "28"}}
+  cores_lookup = {
+                  "hugemem" => {"pitzer" => "80", "owens" => "48"},
+                  "any" => {"pitzer" => "40", "owens" => "28", "cardinal" => "48"}
+                }
 
   base_slurm_args = if bc_num_slots.blank?
                       ["--nodes", "1", "--exclusive", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
@@ -28,7 +30,6 @@ batch_connect:
     - "spark_ui_auth_token"
     - "spark_version"
 script:
-  accounting_id: "<%= account %>"
   native:
   <%- slurm_args.each do |arg| %>
     - "<%= arg %>"
