--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -138,7 +138,12 @@ module purge
 # Load the runtime environment
 runtime_env() {
   module purge
-  module load xalt/latest python/3.6-conda5.2 spark/<%= context.spark_version %>
+  module load xalt/latest
+  <%- if context.cluster != 'cardinal' -%>
+  module load python/3.6-conda5.2 spark/<%= context.spark_version %>
+  <%- else -%>
+  module load python/3.12 spark/<%= context.spark_version %>
+  <%- end -%>
 
   # Disable randomized hash for string in Python 3.3+
   export PYTHONHASHSEED=0
