notebook not available for > 4.0

--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -1,5 +1,13 @@
 #!/usr/bin/env bash
 
+<%-
+  subcommand =  if context.version.split('/')[1].to_s > '4.0' || context.jupyterlab_switch == "1"
+                  'lab'
+                else
+                  'notebook'
+                end
+-%>
+
 #
 # Start Jupyter Notebook server + Spark cluster
 #
@@ -52,4 +60,4 @@ echo "TTT - $(date)"
 
 # Launch Jupyter Notebook interface to Spark
 set -x
-jupyter <%= context.jupyterlab_switch == "1" ? "lab" : "notebook" %> --config="${CONFIG_FILE}"
+jupyter <%= subcommand %> --config="${CONFIG_FILE}"
