support for next gen ascend

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -2,13 +2,13 @@
 
   cores_lookup = {
                   "hugemem" => {"pitzer" => "80", "owens" => "48"},
-                  "any" => {"pitzer" => "40", "owens" => "28", "cardinal" => "48"}
+                  "any" => {"pitzer" => "40", "owens" => "28", "cardinal" => "48", "ascend-nextgen" => '118' }
                 }
 
   base_slurm_args = if bc_num_slots.blank?
-                      ["--nodes", "1", "--exclusive", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
+                      ["--nodes", "1", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
                     else
-                      ["--nodes", "#{bc_num_slots}", "--exclusive", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
+                      ["--nodes", "#{bc_num_slots}", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
                     end
 
   slurm_args =  case node_type
