--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -138,7 +138,11 @@ module purge
 # Load the runtime environment
 runtime_env() {
   module purge
-  module load <%= context.auto_modules_python %> spark/<%= context.spark_version %>
+  <%- if ['pitzer'].include?(context.cluster) -%>
+  module load python/3.6-conda5.2 spark/<%= context.spark_version %>
+  <%- else -%>
+  module load <%= context.auto_modules_python > spark/<%= context.spark_version %>
+  <%- end -%>
 
   # Disable randomized hash for string in Python 3.3+
   export PYTHONHASHSEED=0
