lots of updates + support for pitzer-rhel9 cluster
* pitzer-rhel9 support
* clean up some of this forms indentation
* clean up the core lookup and just use --exclusive for ease
* clean up some of these conditional blocks

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,15 +1,6 @@
 <%-
 
-  cores_lookup = {
-                  "hugemem" => {"pitzer" => "80"},
-                  "any" => {"pitzer" => "40", "cardinal" => "48", "ascend" => '118' }
-                }
-
-  base_slurm_args = if bc_num_slots.blank?
-                      ["--nodes", "1", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
-                    else
-                      ["--nodes", "#{bc_num_slots}", "--ntasks-per-node", cores_lookup[node_type][cluster] ]
-                    end
+  base_slurm_args = ["--nodes", "#{bc_num_slots}", "--exclusive" ]
 
   slurm_args =  case node_type
                 when "hugemem"
