--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -141,7 +141,7 @@ runtime_env() {
   <%- if ['pitzer'].include?(context.cluster) -%>
   module load python/3.6-conda5.2 spark/<%= context.spark_version %>
   <%- else -%>
-  module load <%= context.auto_modules_python > spark/<%= context.spark_version %>
+  module load <%= context.auto_modules_python %> spark/<%= context.spark_version %>
   <%- end -%>
 
   # Disable randomized hash for string in Python 3.3+
