--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -138,10 +138,10 @@ module purge
 # Load the runtime environment
 runtime_env() {
   module purge
-  <%- if context.cluster == 'pitzer' -%>
+  <%- if ['pitzer'].include?(context.cluster) -%>
   module load python/3.6-conda5.2 spark/<%= context.spark_version %>
   <%- else -%>
-  module load python/3.12 spark/<%= context.spark_version %>
+  module load <%= context.auto_modules_python %> spark/<%= context.spark_version %>
   <%- end -%>
 
   # Disable randomized hash for string in Python 3.3+
