Update changelog URL

--- a/info.md.erb
+++ b/info.md.erb
@@ -1,2 +1,2 @@
 ##### Release Notes
-For more details, please refer to the [Changelog](https://www.osc.edu/resources/technical_support/hpc_changelog?keys=jupyter+spark) and the list of [Known issues](https://www.osc.edu/resources/available_software/software_list/spark#block-views-known-issues-block-software)
+For more details, please refer to the [Changelog](https://github.com/OSC/bc_osc_jupyter_spark/releases) and the list of [Known issues](https://www.osc.edu/resources/available_software/software_list/spark#block-views-known-issues-block-software)
